[tool.poetry]
name = "data-analysis"
version = "0.1.0"
description = ""
authors = ["Sidharth Kapur <sidharthkapur1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
notebook = "^6.4.6"
numpy = "1.21.4"
pandas = "^1.3.5"
jupyter-contrib-nbextensions = "^0.5.1"
altair = "^4.2.0"
altair-pandas = {git = "ssh://git@github.com/altair-viz/altair_pandas"}
altair-saver = "^0.5.0"
selenium = "^4.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
